sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/Bat_To_WorkSteps_Status_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This setting used to map Bat status from pos work step status.</description>
    <label>Bat To WorkSteps Status Mapping</label>
    <pluralLabel>Bat To WorkSteps Status Mappings</pluralLabel>
</CustomObject>