sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/fields/Bat_Status__c.field-meta.xml
<CustomField>
    <fullName>Bat_Status__c</fullName>
    <description>BZAP-19643 BAT status received from integration request. Target status in integration request is equivalent to this field.</description>
    <label>Bat Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>