sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/fields/Exclusion_Code__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Code__c</fullName>
    <description>BZAP-19643 Exclusion will be mapped to the integration request</description>
    <label>Exclusion Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>