sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/fields/Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason__c</fullName>
    <description>BZAP-19643 status reason to update on the work step when bat status and exclusion mapping matched</description>
    <label>Status Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>