sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/fields/Work_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Plan_Status__c</fullName>
    <description>BZAP-19643 update work plan status when the bat status and exclusion code mapped</description>
    <label>Work_Plan Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>