sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/fields/Work_Step_Status__c.field-meta.xml
<CustomField>
    <fullName>Work_Step_Status__c</fullName>
    <description>BZAP-19643 work status to be updated when the bat status and exclusion code matched</description>
    <label>Work Step Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>