sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/fields/Work_Step_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Step_Type__c</fullName>
    <description>BZAP-19643 work step type to be mapped and update status reason and status.</description>
    <label>Work Step Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>