sfdx-source/force-app/main/default/objects/Bat_To_WorkSteps_Status_Mapping__mdt/listViews/Bat_Setting.listView-meta.xml
<ListView>
    <fullName>Bat_Setting</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Bat_Status__c</columns>
    <columns>Exclusion_Code__c</columns>
    <columns>Work_Step_Status__c</columns>
    <columns>Work_Step_Type__c</columns>
    <columns>Status_Reason__c</columns>
    <columns>Work_Plan_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bat Setting</label>
</ListView>